# DocSeal_CLI

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
completions/: docseal.bash  docseal.ps1  docseal.zsh
doc/: input.md
docs/: DocSeal_Synopsis.docx
src/docseal/: cli.py  crypto.py  errors.py  format.py
tests/: test_roundtrip.py
